Design : Caption position and slider overflow issue

--- a/style/gallery.less
+++ b/style/gallery.less
@@ -64,6 +64,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			overflow: hidden;
 
 			img {
 				max-width: calc( 100vw );
@@ -78,7 +79,7 @@
 			&-caption {
 				// @todo the actual position will be updated after image attribution
 				position: absolute;
-				bottom: 0;
+				bottom: 55px;
 				padding: 30px 30px;
 				width: calc( 100vw - 30px );
 				font-size: 18px;
